[gd_scene load_steps=5 format=2]

[ext_resource path="res://Station.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://Client.tscn" type="PackedScene" id=5]

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="Station" parent="." instance=ExtResource( 1 )]

[node name="Client" parent="." instance=ExtResource( 5 )]
position = Vector2( 356, 111 )

[node name="HUD" parent="." instance=ExtResource( 3 )]

[connection signal="money_changed" from="." to="HUD" method="_on_Main_money_changed"]
[connection signal="station_selected" from="Station" to="Client" method="_on_Station_selected"]
[connection signal="client_left" from="Client" to="." method="_on_Client_client_left"]
