[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Main.gd" type="Script" id=1]
[ext_resource path="res://scenes/Client.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Station.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=4]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )
client_scene = ExtResource( 2 )

[node name="Station" parent="." instance=ExtResource( 3 )]
position = Vector2( 531, 256 )

[node name="Station2" parent="." instance=ExtResource( 3 )]
position = Vector2( 623, 257 )
type = 1

[node name="Station3" parent="." instance=ExtResource( 3 )]
position = Vector2( 722, 257 )
type = 2

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="NewClientTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="money_changed" from="." to="HUD" method="_on_Main_money_changed"]
[connection signal="timeout" from="NewClientTimer" to="." method="_on_NewClientTimer_timeout"]
